lang/tests/contract/common/ui/fail/01-constructor-returns.stderr
error: contract constructor should not have return value
  --> $DIR/01-constructor-returns.rs:10:31
   |
10 |         pub fn new(&mut self) -> Self {}
   |                               ^^^^^^^
